--- a/colorize-demo.html
+++ b/colorize-demo.html
@@ -165,10 +165,20 @@ Example:
       for (var i = 0; i < items.length; i++) {
         items[i].addEventListener("click", function(event) {
           this.style.backgroundColor = color;
-          this.innerHTML = "";
+          this.innerHTML = rgb2hex(color);
         }, false);
       }
+      /**
+      * change color text from rgb to hex
+      */
+      function rgb2hex(rgb) {
+        rgb = rgb.match(/^rgb\((\d+),\s*(\d+),\s*(\d+)\)$/);
 
+        function hex(x) {
+          return ("0" + parseInt(x).toString(16)).slice(-2);
+        }
+        return "#" + hex(rgb[1]) + hex(rgb[2]) + hex(rgb[3]);
+      }
     }
 
 
