--- a/colorize-demo.html
+++ b/colorize-demo.html
@@ -102,11 +102,12 @@ Example:
     properties: {
 
       /**
-      * the default color
-      *
+      * the default color,
+      * after press the clear button 
+      * it will set all the items to this default color
       **/
 
-      defaultColor:{
+      defaultColor: {
         type: String,
         value: '#fff'
       },
@@ -144,7 +145,7 @@ Example:
     clear: function() {
       var items = document.getElementsByClassName('item');
       for (var i = 0; i < items.length; i++) {
-        items[i].style.backgroundColor = '#fff';
+        items[i].style.backgroundColor = this.defaultColor;
       }
     },
 
